--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-generator-yo",
+  "name": "cookingBlog",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
@@ -16,7 +16,7 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "angularGeneratorYoApp",
+  "moduleName": "cookingBlog",
   "overrides": {
     "bootstrap": {
       "main": [
