--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,10 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "angular-ui-router": "~0.2.15",
+    "tinymce": "tinymce-dist#~4.3.3",
+    "angular-ui-tinymce": "latest"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
