--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "moment": "~2.10.6",
     "angular-ui-router": "~0.2.15",
     "tinymce": "tinymce-dist#~4.3.3",
-    "angular-ui-tinymce": "latest"
+    "angular-ui-tinymce": "latest",
+    "wow": "wowjs#~1.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
