--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-ui-router": "~0.2.15",
     "tinymce": "tinymce-dist#~4.3.3",
     "angular-ui-tinymce": "latest",
-    "wow": "wowjs#~1.1.2"
+    "wow": "wowjs#~1.1.2",
+    "angular-bootstrap": "~1.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
