--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tinymce": "tinymce-dist#~4.3.3",
     "angular-ui-tinymce": "latest",
     "wow": "wowjs#~1.1.2",
-    "angular-bootstrap": "~1.1.2"
+    "angular-bootstrap": "~1.1.2",
+    "font-awesome": "~4.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
