--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-ui-tinymce": "latest",
     "wow": "wowjs#~1.1.2",
     "angular-bootstrap": "~1.1.2",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "angular-loading-bar": "~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
